--- a/src/templates/html/bootstrap/v4_5/login.ejs
+++ b/src/templates/html/bootstrap/v4_5/login.ejs
@@ -4,7 +4,8 @@
 		<div class="card ">
 			<div class="card-header">Join the meeting</div>	
 			<div class="card-body">				
-				<form id="form-login">								
+				<form id="cz-kibo-meeting-chime-client-form-login">
+					<div class="cz-kibo-meeting-chime-client-alert-root"></div>								
 					<div class="form-group">						
 						<div class="input-group mb-2">
 							<div class="input-group-prepend">
